T1825-0 Fix widget icons crop on safari

--- a/grails-app/assets/stylesheets/application/_style.scss
+++ b/grails-app/assets/stylesheets/application/_style.scss
@@ -1394,8 +1394,8 @@ $widget-card-header-height: 42px;
       background-color: $is-bg-color;
 
       .card-header {
-        height: $widget-card-header-height;
         background: none;
+        padding-bottom: 0;
 
         a {
           color: $is-text-color-alt;
